Closed
Bug 91614
Opened 24 years ago
Closed 24 years ago
Range demo at pbwizard.com crashes the browser
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
mozilla0.9.3
People
(Reporter: hsivonen, Assigned: jst)
References
()
Details
(Keywords: crash, Whiteboard: PDT+ [HAVE FIX])
Attachments
(2 files)
11.15 KB,
text/plain
|
Details | |
1.55 KB,
patch
|
Details | Diff | Splinter Review |
Build ID: 2001071905 0.9.2 branch
Steps to reproduce:
1) Load the indicated URL.
Actual results:
Crash.
Expected results:
No crash.
crash.log coming up (The new build no longer have useful function names. Can the
symbols be correlated with function names?)
Reporter | ||
Comment 1•24 years ago
|
||
Comment 2•24 years ago
|
||
Ick. Confirming on the trunk also. Linux 2001071921.
Comment 3•24 years ago
|
||
Talkback ID TB33119980H
Comment 4•24 years ago
|
||
Here's what I get from gdb
"Program received signal SIGSEGV, Segmentation fault,
0x2b6ad55c in NSGetModule () from
/home/sco/local/mozilla/components/libgkcontent.so
"
linux trunk 2001071913
OS: MacOS X → All
Hardware: Macintosh → All
Assignee | ||
Comment 5•24 years ago
|
||
Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla0.9.3
Assignee | ||
Comment 6•24 years ago
|
||
The fix I just attached avoids using the owner document of one of the nodes in
the range as the factory method for creating the document fragment, using the
document to do that is not required since we can simply call
NS_NewDocumentFragment(), which is exactly what calling
document->CreateDocumentFragment() does. The attached patch doesn't really
change anything, except that it avoids trying to call a method in a null
pointer, thus avoiding the crash.
Comment 7•24 years ago
|
||
This is a duplicate for 3 range bugs. Bugzilla's query page is down right now
so I cannot search for the bugs.
The bugs deal with:
Range.extractContents
Range.cloneContents
Range.??Contents (forget this one)
I re-opened them up with short sample code that causes the crash.
Jeff Yates
Comment 8•24 years ago
|
||
crashes on windows tooo
Comment 9•24 years ago
|
||
PDT+, please check in if you get fully comfortable and fully reviewed.
Whiteboard: [HAVE FIX] → PDT+ [HAVE FIX]
Comment 10•24 years ago
|
||
r/sr=vidur
Comment 11•24 years ago
|
||
this bug is a duplicate of bugs: 58974, 58970 and 84208.
Assignee | ||
Comment 12•24 years ago
|
||
pollmann srz r=polmann.
Assignee | ||
Comment 13•24 years ago
|
||
Fix checked in on the branch. Will check in on the trunk soon.
Assignee | ||
Comment 14•24 years ago
|
||
Fixed on the trunk now too.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 15•24 years ago
|
||
When you say trunk do you mean the Netscape 6.1 trunk?
Jeff
Assignee | ||
Comment 16•24 years ago
|
||
Trunk == mozilla nightly builds, branch == Netscape 6.1
Comment 17•24 years ago
|
||
looks good to me checked on 2001-07-21-0.9.2 build
Component: DOM: Core → DOM: Core & HTML
QA Contact: stummala → general
You need to log in
before you can comment on or make changes to this bug.
Description
•