Fixing bug 91614 (and probably 58974, 58970, and 84208). Don't use the document as a factory for creating document fragments since the document is not always around, call internal methods to create the document fragment in stead. r=pollmann, sr=vidur